fix: fixed p0 tasks

--- a/webapp/src/app/pacman-features/modules/admin/enable-disable/enable-disable.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/enable-disable/enable-disable.component.html
@@ -13,7 +13,9 @@
  -->
 
 <div class="floating-widgets-section flex flex-col issue-listing-wrapper" [class.filter-absent]='filters.length == 0'>
+    <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding: 18px;"></div>
     <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [isCustomParentRoute]="true" [parentRouteName]="'admin'" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+    </div>
     <div class="floating-widgets-header flex flex-between">
         <div>
             <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
