--- a/webapp/src/app/pacman-features/modules/compliance/tagging-compliance/tagging-compliance.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/tagging-compliance/tagging-compliance.component.html
@@ -50,7 +50,7 @@
     </div>
     <div class="fixed-widgets-section">
         <div class="compliance-issues-container">
-            <app-tagging-summary [pageLevel]="pageLevel"></app-tagging-summary>
+            <app-tagging-summary [breadcrumbPresent]="breadcrumbPresent" [pageLevel]="pageLevel"></app-tagging-summary>
             <app-total-tag-compliance [pageLevel]="pageLevel"></app-total-tag-compliance>
         </div>
     </div>
