--- a/webapp/src/app/pacman-features/modules/admin/sticky-exceptions/create-sticky-exceptions/create-sticky-exceptions.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/sticky-exceptions/create-sticky-exceptions/create-sticky-exceptions.component.html
@@ -14,8 +14,10 @@
 
 <div class="sticky-exceptions-wrapper floating-widgets-section flex flex-col issue-listing-wrapper"
     [class.filter-absent]='filters.length == 0'>
+    <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding: 18px;">
     <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [isCustomParentRoute]="true"
         [parentRouteName]="'admin'" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+    </div>
     <div class="floating-widgets-header flex flex-between">
         <div>
             <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;"
