--- a/webapp/src/app/pacman-features/modules/assets/aws-notifications/aws-notifications.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/aws-notifications/aws-notifications.component.html
@@ -13,7 +13,9 @@
  -->
 
  <div class="floating-widgets-section flex flex-col issue-listing-wrapper" [class.filter-absent]='filters.length == 0'>
-  <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [asset]="true" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+    <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding: 18px;">
+    <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [asset]="true" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+    </div>
   <div class="floating-widgets-header flex flex-between">
       <div>
           <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
