--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="container-1">
         <mat-grid-list [cols]="breakpoint1" rowHeight="186px" gutterSize="20px" (window:resize)="onresize($event)">
             <mat-grid-tile class="violation-tile" *ngFor="let card of violationCards">
-                <app-violations-card [card]="card"></app-violations-card>
+                <app-violations-card [breadcrumbPresent]="breadcrumbPresent" [card]="card"></app-violations-card>
             </mat-grid-tile>
         </mat-grid-list>
     </div>
