--- a/webapp/src/app/pacman-features/modules/compliance/issue-details/issue-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-details/issue-details.component.html
@@ -12,7 +12,9 @@
  * limitations under the License.
  -->
 
- <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+<div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding: 18px;">
+    <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+</div>
 <section class="issue-details-wrapper" id="searchtext" (click)='bodyClicked();'>
     <header class="header-wrapper flex flex-align-center">
         <div class="arrow-img" (click)="navigateBack()">
@@ -30,7 +32,7 @@
                                 <app-issue-blocks *ngFor="let data of issueTopblocks" [header]="data.header" [footer]="data.footer" [img]="data.img"></app-issue-blocks>
                             </div>
                             <div class="blocks-section blocks-section-bottom">
-                                <app-policy-violation-desc [autofixData]='autofixData' [pageLevel]="pageLevel" [violationData]="issueBlocks"></app-policy-violation-desc>
+                                <app-policy-violation-desc [breadcrumbPresent]="breadcrumbPresent" [issueId]="policyViolationId" [autofixData]='autofixData' [pageLevel]="pageLevel" [violationData]="issueBlocks"></app-policy-violation-desc>
                             </div>
                         </div>
                         <div class="right-details-container flex flex-col" *ngIf="issueBlocks">
