--- a/webapp/src/app/pacman-features/modules/compliance/policy-details/policy-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-details/policy-details.component.html
@@ -14,7 +14,9 @@
 
  <div class="compliance-dashboard-wrapper flex flex-between">
     <div class="floating-widgets-section flex flex-col">
+        <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding: 18px;">
         <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+        </div>
         <div class="floating-widgets-header flex flex-between">
             <div>
                 <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
@@ -41,7 +43,7 @@
                     </li>
                     <li class="widget-wrapper">
                         <div class="widget" *ngIf="setRuleIdObtained == true">
-                            <app-all-policy-violations [ruleID]="ruleID" *ngIf="setRuleIdObtained == true"></app-all-policy-violations>
+                            <app-all-policy-violations [breadcrumbPresent]="breadcrumbPresent" [ruleID]="ruleID" *ngIf="setRuleIdObtained == true"></app-all-policy-violations>
                         </div>
                     </li>
                 </ul>
