--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
@@ -14,7 +14,9 @@
 
  <div class="policy-knowledgebase-wrapper flex flex-between flex-col flex-start relative">
   <div class="flex flex-col pk-header-wrapper">
+      <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding: 18px;">
       <app-breadcrumb [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+      </div>
       <div class="floating-widgets-header flex flex-between">
           <div>
               <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
