--- a/webapp/src/app/pacman-features/modules/compliance/policy-violations-list/policy-violations-list.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-violations-list/policy-violations-list.component.html
@@ -1,6 +1,8 @@
 <div class="compliance-dashboard-wrapper flex flex-between">
   <div class="floating-widgets-section-full flex flex-col">
+      <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding: 18px;">
       <app-breadcrumb [breadcrumbLinks]="breadcrumbDetails.breadcrumbLinks" [breadcrumbArray]="breadcrumbDetails.breadcrumbArray" [breadcrumbPresent]="breadcrumbDetails.breadcrumbPresent"></app-breadcrumb>
+      </div>
       <div class="floating-widgets-header flex flex-between">
           <div>
               <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
