--- a/webapp/src/app/shared/common-page-template/common-page-template.component.html
+++ b/webapp/src/app/shared/common-page-template/common-page-template.component.html
@@ -14,7 +14,9 @@
 
  <div class="compliance-dashboard-wrapper flex flex-between">
     <div class="floating-widgets-section-full flex flex-col">
-        <app-breadcrumb [breadcrumbLinks]="breadcrumbDetails.breadcrumbLinks" [breadcrumbArray]="breadcrumbDetails.breadcrumbArray" [breadcrumbPresent]="breadcrumbDetails.breadcrumbPresent"></app-breadcrumb>
+        <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding: 18px;">
+            <app-breadcrumb [breadcrumbLinks]="breadcrumbDetails.breadcrumbLinks" [breadcrumbArray]="breadcrumbDetails.breadcrumbArray" [breadcrumbPresent]="breadcrumbDetails.breadcrumbPresent"></app-breadcrumb>
+        </div>
         <div class="floating-widgets-header flex flex-between">
             <div>
                 <img *ngIf="backButtonRequired" class="arrow-img" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
