--- a/webapp/src/app/pacman-features/modules/assets/asset-dashboard/asset-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-dashboard/asset-dashboard.component.html
@@ -1,18 +1,4 @@
-<!--
- *Copyright 2018 T Mobile, Inc. or its affiliates. All Rights Reserved.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
- * this file except in compliance with the License. A copy of the License is located at
- * 
- * http://www.apache.org/licenses/LICENSE-2.0
- * 
- * or in the "license" file accompanying this file. This file is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
- * implied. See the License for the specific language governing permissions and
- * limitations under the License.
- -->
-
- <div class="container-wrapper">
+<div class="container-wrapper">
     <div class="asset-dashboard-container">
         <!-- <div class="asset-dashboard-header">Asset Overview</div> -->
         <div class="asset-dashboard-wrapper flex flex-col">
@@ -47,37 +33,18 @@
             <mat-card class="panel">
                 <mat-card-header>
                     {{ card.header }}
-                    <div (click)="isCustomSelected = false" class="graph-dropdown-container" *ngIf="card.id == 3">
+                    <div (click)="isCustomSelected = false" class="graph-dropdown-container">
                         <app-dropdown [items]="['1 week', '1 month', '6 months', '12 months', 'All time', 'Custom']" [selectedItem]="'All time'" (selected)="handleGraphIntervalSelection($event)"></app-dropdown>
-                    </div>
-                    <div class="date-selection-modal" *ngIf="isCustomSelected">
-                        <mat-card style="padding: 0; height: 100%;">
-                        <mat-card-header style="padding: 16px 24px; height:auto">Custom Selection</mat-card-header>
-                        <mat-card-content style="padding: 20px 24px;">
-                            <div class="custom-selection-content-wrapper">
-                                <span>from:</span>
-                                <app-dropdown [items]="years" (selected)="onSelectYear(fromDate, $event)" placeholder="Year"></app-dropdown>
-                                <app-dropdown [items]="allMonths" (selected)="onSelectMonth(fromDate, $event)" placeholder="Month"></app-dropdown>
-                                <app-dropdown [items]="allMonthDays" (selected)="onSelectDay(fromDate, $event)" placeholder="Date"></app-dropdown>
-                                <span>to:</span>
-                                <app-dropdown [items]="years" (selected)="onSelectYear(toDate, $event)" placeholder="Year"></app-dropdown>
-                                <app-dropdown [items]="allMonths" (selected)="onSelectMonth(toDate, $event)" placeholder="Month"></app-dropdown>
-                                <app-dropdown [items]="allMonthDays" (selected)="onSelectDay(toDate, $event)" placeholder="Date"></app-dropdown>
-                            </div>
-                        </mat-card-content>
-                        <mat-card-actions>
-                            <button mat-button (click)="customDateSelected(fromDate, toDate)">
-                            Apply
-                            </button>
-                        </mat-card-actions>
-                        </mat-card>
+                        <div class="date-selection-modal" *ngIf="isCustomSelected">
+                             <app-date-selection (datesSelected)="dateIntervalSelected($event.from, $event.to)"></app-date-selection>
+                        </div>
                     </div>
                 </mat-card-header>
                 <mat-card-content>
-                    <div class="chart" *ngIf="card.id == 3" style="overflow-y: scroll;">
-                        <div [class.loader]="totalAssetsCountData.length==0 && totalAssetsCountDataError==''"></div>
-                        <app-error-message *ngIf="totalAssetsCountDataError" [selectedValue]="totalAssetsCountDataError"></app-error-message>
+                    <div class="chart" style="overflow-y: scroll;">
                         <div class="chart-wrapper" id="TotalAssetsSummaryTrend" style="height: 100%; width: 100%; background-color: white;">
+                            <div [class.loader]="totalAssetsCountData.length==0 && totalAssetsCountDataError==''"></div>
+                            <app-error-message *ngIf="totalAssetsCountDataError" [selectedValue]="totalAssetsCountDataError"></app-error-message>
                             <app-multiline-zoom-graph *ngIf="totalAssetsCountData.length>0 && totalAssetsCountDataError==''" [id]="'TotalAssetsSummaryTrend'" [showLegend]="true" [yAxisLabel]="'Total Assets'" [graphHeight]="320" [graphLinesData]="totalAssetsCountData"></app-multiline-zoom-graph>
                         </div>
                     </div>
